// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App at / 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      <span>
        Languages
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    href="/counter"
  >
    <span>
      counter
    </span>
  </a>
  <a
    href="/info"
  >
    <span>
      info
    </span>
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Hello, world!
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      $100.00
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Jul 27, 2019
    </span>
  </p>
</div>
`;

exports[`App at /counter 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      <span>
        Languages
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    href="/counter"
  >
    <span>
      counter
    </span>
  </a>
  <a
    href="/info"
  >
    <span>
      info
    </span>
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Hello, world!
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      $100.00
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Jul 27, 2019
    </span>
  </p>
  <div>
    0
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span>
          reset
        </span>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span>
          +
        </span>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span>
          -
        </span>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="incrementIfOddButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span>
          + if odd
        </span>
      </span>
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="incrementAsyncButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        <span>
          + in 1 second
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`App at /info 1`] = `
<div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
      data-shrink="true"
      for="stub uuid"
    >
      <span>
        Languages
      </span>
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <select
        aria-invalid="false"
        class="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
        data-testid="localeSelect"
        id="stub uuid"
      >
        <option
          value="en"
        >
          English
        </option>
        <option
          value="ja"
        >
          日本語
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <a
    href="/counter"
  >
    <span>
      counter
    </span>
  </a>
  <a
    href="/info"
  >
    <span>
      info
    </span>
  </a>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Hello, world!
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      $100.00
    </span>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <span>
      Jul 27, 2019
    </span>
  </p>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span>
        Fetch data
      </span>
    </span>
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Fetching not started.
  </p>
</div>
`;
